2008-08-28  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: Add configure option for non-standard binutils lib

2008-08-28  Andi Kleen  <andi@firstfloor.org>

	* events/i386/arch_perfmon/events:
	* events/i386/arch_perfmon/unit_masks:
	* events/Makefile.am:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* libop/op_events.h:
	* libop/op_hw_specific.h:
	* libpp/op_header.cpp:
	* utils/ophelp.c: support for Intel arch perfmon

2008-08-28  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: Change AM_INIT_AUTOMAKE to 0.9.5cvs; enables -werror
	  gcc option to stop build on warnings

2008-08-27  Jatin Nansi <jnansi@redhat.com>

	* utils/opcontrol: vecho parameters after "--verbose" option processed

2008-08-08  Daniel Hansel <daniel.hansel@linux.vnet.ibm.com>

	* daemon/init.c: Fixed call of execvp() to execute opjitconv if
	  it is installed in a custom directory

2008-08-07  Maynard Johnson  <maynardj@us.ibm.com>

	* libutil++/bfd_support.cpp:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h: Fix a couple problems relating
	  to overlay symbols for Cell SPE applications

2008-07-31  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: Fix to allow libtool to recognize
	  alternate binutils dir passed via --with-binutils

2008-07-24  Jean Pihet <jpihet@mvista.com>

	* events/arm/armv7/events:
	* events/arm/armv7/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c: Added ARMv7 support to be consistent with the
	  kernel, added ARMv7 specific events.
	  Tested on OMAP3430 and OMAP3530 chipsets.

2008-07-17  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.4

2008-07-17  Will Cohen  <wcohen@redhat.com>

	* libop/op_alloc_counter.c: Assume perfmon managing PMU hw
	  when no counters

2008-07-07  Maynard Johnson  <maynardj@us.ibm.com>

	* HACKING: Ask contributors to include Signed-off-by
	  line with their patches
