@@ -103,8 +103,8 @@ dnl advanced glibc features which we need but may not be present
 AC_CHECK_FUNCS(sched_setaffinity perfmonctl)
 
 AC_CHECK_LIB(popt, poptGetContext,, AC_MSG_ERROR([popt library not found]))
-
 AX_BINUTILS
+AX_CELL_SPU
 
 # C++ tests
  
@@ -219,7 +219,6 @@ OP_BINDIR=`eval echo "$my_op_bindir/"`
 AC_DEFINE_UNQUOTED(OP_BINDIR, "$OP_BINDIR", [package binary directory])
 OP_DOCDIR=`eval echo "${my_op_prefix}/share/doc/$PACKAGE/"`
 AC_SUBST(OP_DOCDIR)
-AX_CELL_SPU
 
 AC_OUTPUT(Makefile \
 	m4/Makefile \
