@@ -1,4 +1,5 @@
 dnl AX_BINUTILS - check for needed binutils stuff
+
 AC_DEFUN([AX_BINUTILS],
 [
 dnl some distro have a libiberty.a but does not have a libiberty.h
@@ -8,11 +9,18 @@ AC_CHECK_FUNCS(xcalloc)
 AC_CHECK_FUNCS(xmemdup)
 AC_CHECK_LIB(dl, dlopen, LIBS="$LIBS -ldl"; DL_LIB="-ldl", DL_LIB="")
 AC_CHECK_LIB(intl, main, LIBS="$LIBS -lintl"; INTL_LIB="-lintl", INTL_LIB="")
-AC_CHECK_LIB(bfd, bfd_openr,, AC_MSG_ERROR([bfd library not found]))
+
+AC_CHECK_LIB(bfd, bfd_openr,,
+	[AC_CHECK_LIB(z, compress,
+dnl Use a different bfd function here so as not to use cached result from above
+		[AC_CHECK_LIB(bfd, bfd_fdopenr, LIBS="$LIBS -lz",
+			[AC_MSG_ERROR([bfd library not found])], -lz)
+		],
+		[AC_MSG_ERROR([libz library not found; required by libbfd])])
+	]
+)
 
 AC_LANG_PUSH(C)
-SAVE_LIBS=$LIBS
-LIBS=" -lbfd -liberty "
 # Determine if bfd_get_synthetic_symtab macro is available
 OS="`uname`"
 if test "$OS" = "Linux"; then
@@ -27,7 +35,7 @@ if test "$OS" = "Linux"; then
 			char * ppc_name = bfd_elf64_powerpc_vec.name;
 			char * ppcle_name = bfd_elf64_powerpcle_vec.name;]])
 		])
-	$CC conftest.$ac_ext $LIBS -o  test-for-synth > /dev/null 2>&1
+	$CC conftest.$ac_ext $CFLAGS $LDFLAGS $LIBS -o  test-for-synth > /dev/null 2>&1
 	if test -f test-for-synth; then
 		echo "yes"
 		SYNTHESIZE_SYMBOLS='1'
@@ -40,6 +48,5 @@ if test "$OS" = "Linux"; then
 
 fi
 AC_LANG_POP(C)
-LIBS=$SAVE_LIBS
 ]
 )
